Cleanup surefire and logger fixes